tests/snapshots/all_elements__all_widgets-2.snap
---
source: tests/all_elements.rs
expression: root_state_2

---
RootWidget(
    Scroll(
        ClipBox(
            Column(
                Container(
                    Column(
                        Container(
                            Row(
                                IdentityWrapper(
                                    TextBox,
                                ),
                                IdentityWrapper(
                                    ControllerHost(
                                        Button(
                                            "New task",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                        Container(
                            Row(
                                IdentityWrapper(
                                    Checkbox(
                                        "[_] ",
                                    ),
                                ),
                                Label(
                                    "Task #0",
                                ),
                                Label(
                                    "(complete)",
                                ),
                            ),
                        ),
                        Container(
                            Row(
                                IdentityWrapper(
                                    Checkbox(
                                        "[_] ",
                                    ),
                                ),
                                Label(
                                    "Task #1",
                                ),
                                Label(
                                    "(complete)",
                                ),
                            ),
                        ),
                        Container(
                            Row(
                                IdentityWrapper(
                                    Checkbox(
                                        "[X] ",
                                    ),
                                ),
                                Label(
                                    "Task #2",
                                ),
                            ),
                        ),
                        Container(
                            Row(
                                IdentityWrapper(
                                    Checkbox(
                                        "[X] ",
                                    ),
                                ),
                                Label(
                                    "Task #3",
                                ),
                            ),
                        ),
                        Container(
                            Row(
                                IdentityWrapper(
                                    Checkbox(
                                        "[_] ",
                                    ),
                                ),
                                Label(
                                    "Next task",
                                ),
                                Label(
                                    "(complete)",
                                ),
                            ),
                        ),
                        IdentityWrapper(
                            ControllerHost(
                                Button(
                                    "Delete completed tasks",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
